// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiffStat expandedCounts 1`] = `
<div
  className="diff-stat "
  data-tooltip="1 addition, 2 changes, 3 deletions"
>
  <span
    className="diff-stat__total font-weight-bold"
  >
    <span
      className="diff-stat__text-added mr-1"
    >
      +
      1
    </span>
    <span
      className="diff-stat__text-changed mr-1"
    >
      •
      2
    </span>
    <span
      className="diff-stat__text-deleted mr-1"
    >
      −
      3
    </span>
  </span>
  <div
    className="diff-stat__square diff-stat__added"
    key="0"
  />
  <div
    className="diff-stat__square diff-stat__changed"
    key="1"
  />
  <div
    className="diff-stat__square diff-stat__deleted"
    key="2"
  />
  <div
    className="diff-stat__square diff-stat__deleted"
    key="3"
  />
  <div
    className="diff-stat__square diff-stat__deleted"
    key="4"
  />
</div>
`;

exports[`DiffStat standard 1`] = `
<div
  className="diff-stat "
  data-tooltip="1 addition, 2 changes, 3 deletions"
>
  <small
    className="diff-stat__total"
  >
    8
  </small>
  <div
    className="diff-stat__square diff-stat__added"
    key="0"
  />
  <div
    className="diff-stat__square diff-stat__changed"
    key="1"
  />
  <div
    className="diff-stat__square diff-stat__deleted"
    key="2"
  />
  <div
    className="diff-stat__square diff-stat__deleted"
    key="3"
  />
  <div
    className="diff-stat__square diff-stat__deleted"
    key="4"
  />
</div>
`;
